--- a/css/sections.css
+++ b/css/sections.css
@@ -500,6 +500,7 @@
             position: relative;
             text-decoration: none;
             color: inherit;
+            overflow: hidden;
         }
         .blog-item::before {
             content: '';
